GeneWeb version 4.02
--------------------

* GeneWeb server or CGI (gwd)
  - [15 Jun 01] Fixed bug in merging families: if there were a key
    conflict in one person, the button "Create" proposing to select a
    fresh key number did not work.
  - [12 Jun 01] In case of deleted families, the list of the latest
    marriages worked bad.
  - [07 Jun 01] (technical point) fixed problem: in case when the data
    base is not writable, an error message is now displayed, instead of
    just an empty answer.
  - [02 Jun 01] Fixed bug: in family form, if surnames contained
    double quotes, they were incorrectly displayed.
  - [29 May 01] Fixed problem with option -log (traces in a log file):
    if the log file was not writable, all requests failed (instead of
    ignoring it).
  - [11 May 01] Improved data base access speed in case when many updates
    have been done (and data base not having been cleaned up).
  - [09 May 01] Fixed bug: system images with underscores did not work
    (may happen in cases of customization of the welcome page)
  - [09 May 01] Fixed bug: in family update form, if the comment
    contained quotes, the text was truncated.
  - [05 May 01] When creating or modifying a family, warn for children
    whose sex is undefined.
  - [01 May 01] In personal pages, related persons (godchildren, adoptive
    children, etc) are displayed in their baptism or birth order.
  - [19 Apr 01] Improved the sending of images. Should work better,
    particularly for images sent from a MacIntosh.
  - [11 Apr 01] The Gregorian and Julian calendars did not work for years
    less than 4800 BC. Fixed.

* Templates files (etc/*.txt)
  For programmers...
  - [28 Apr 01] Added ability to use variable "cvar_x" in perso.txt, returning
    the value of the variable x of the base configuration file.

* Setup program (gwsetup)
  - [11 Apr 01] Fixed security hole: if the file only.txt was not
    accessible or corrupted for some reason (it should not but...), the