@@ -1,5 +1,5 @@
 (* camlp4r ./pa_html.cmo *)
-(* $Id: mergeFamOk.ml,v 4.3 2001-06-15 18:07:05 ddr Exp $ *)
+(* $Id: mergeFamOk.ml,v 4.4 2001-06-20 16:34:47 ddr Exp $ *)
 (* Copyright (c) 2001 INRIA *)
 
 open Config;
@@ -80,7 +80,11 @@ value print_merge conf base =
       let digest =
         Update.digest_family fam1 (base.data.couples.get f1) des1
       in
-      UpdateFam.print_merge1 conf base sfam sdes fam2 digest
+      let scpl =
+        Gutil.map_couple_p (UpdateFam.person_key base)
+          (coi base sfam.fam_index)
+      in
+      UpdateFam.print_update_fam conf base (sfam, scpl, sdes) digest
   | _ -> incorrect_request conf ]
 ;
 
