@@ -1,18 +1,10 @@
-(* $Id: updateFam.mli,v 4.1 2001-06-15 15:25:30 ddr Exp $ *)
+(* $Id: updateFam.mli,v 4.2 2001-06-20 16:34:48 ddr Exp $ *)
 (* Copyright (c) 2001 INRIA *)
 
 open Def;
 open Config;
 
-value print_add1 :
-  config -> base -> gen_family Update.key string ->
-    gen_couple Update.key -> gen_descend Update.key -> bool -> unit;
-value print_mod1 :
-  config -> base -> gen_family Update.key string ->
-    gen_couple Update.key -> gen_descend Update.key -> string -> unit;
-value print_merge1 :
-  config -> base -> gen_family Update.key string ->
-    gen_descend Update.key -> family -> string -> unit;
+value person_key : base -> iper -> Update.key;
 
 value print_update_fam :
   config -> base ->
